@@ -6,13 +6,13 @@
 ;;
 
 (defvar slime-package-file-candidates
-  (mapcar #'file-name-nondirectory 
+  (mapcar #'file-name-nondirectory
 	  '("package.lisp" "packages.lisp" "pkgdcl.lisp" "defpackage.lisp")))
 
-(defvar slime-export-symbol-representation-function 
+(defvar slime-export-symbol-representation-function
   #'(lambda (n) (format "#:%s" n)))
 
-(defvar slime-defpackage-regexp 
+(defvar slime-defpackage-regexp
   "^(\\(cl:\\|common-lisp:\\)?defpackage\\>[ \t']*")
 
 
@@ -26,7 +26,7 @@
       (block nil
 	(while (re-search-forward slime-defpackage-regexp nil t)
 	  (when (slime-package-equal package (slime-sexp-at-point))
-	    (return (make-slime-file-location ,(buffer-file-name) (point)))))))))
+	    (return (make-slime-file-location (buffer-file-name) (point)))))))))
 
 (defun slime-package-equal (designator1 designator2)
   ;; First try to be lucky and compare the strings themselves (for the
@@ -48,7 +48,7 @@
 
 (defun slime-find-possible-package-file (buffer-file-name)
   (flet ((file-name-subdirectory (dirname)
-	   (expand-file-name 
+	   (expand-file-name
 	    (concat (file-name-as-directory (slime-to-lisp-filename dirname))
 		    (file-name-as-directory ".."))))
 	 (try (dirname)
@@ -85,7 +85,7 @@ places the cursor at the start of the DEFPACKAGE form."
 	(while (ignore-errors (slime-forward-sexp) t)
 	  (slime-forward-blanks)
 	  (when (slime-at-expression-p '(:export *))
-	    (setq point (point)) 
+	    (setq point (point))
 	    (return)))))
     (if point
 	(goto-char point)
@@ -138,11 +138,11 @@ already exported/unexported."
 	     (when point (goto-char point))
 	     point)))
     (let ((defpackage-point (point))
-	  (symbol-name (funcall slime-export-symbol-representation-function 
+	  (symbol-name (funcall slime-export-symbol-representation-function
 				symbol-name)))
       (cond ((goto-last-export-clause)
 	     (down-list) (slime-end-of-list)
-	     (unless (looking-back "^\\s-*") 
+	     (unless (looking-back "^\\s-*")
 	       (newline-and-indent))
 	     (insert symbol-name))
 	    (t
@@ -169,7 +169,7 @@ belonging to the current buffer-package. With prefix-arg, remove
 the symbol again. Additionally performs an EXPORT/UNEXPORT of the
 symbol in the Lisp image if possible."
   (interactive)
-  (let ((package (slime-current-package)) 
+  (let ((package (slime-current-package))
 	(symbol (slime-symbol-name-at-point)))
     (unless symbol (error "No symbol at point."))
     (cond (current-prefix-arg
